@@ -1,4 +1,2 @@
 #!/bin/bash
-#java --enable-preview --module-path ./libs -m org.example.application/org.example.application.run.Main
-
 exec java --enable-preview --module-path ./libs -m org.example.application/org.example.application.run.Main < /dev/tty
